# DemoExampleRepo

./: README.md
cmake/find_package_module_demo1/: Makefile  libadd.cc
cmake/find_package_module_demo1/test/: CMakeLists.txt  addtest.cc
cmake/find_package_module_demo1/test/cmake/: FindADD.cmake
